--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -4,7 +4,7 @@
             android:id="@+id/main_graph"
             app:startDestination="@id/splashFragment">
 
-    <fragment android:id="@+id/splashFragment" android:name="nz.calculatorpp.android.popcorn.SplashFragment"
+    <fragment android:id="@+id/splashFragment" android:name="nz.calculatorpp.android.bigbuttoncalculator.SplashFragment"
               android:label="SplashFragment">
         <action android:id="@+id/action_splashFragment_to_lightFragment"
                 app:destination="@id/lightFragment"
@@ -16,21 +16,21 @@
                 app:popUpToInclusive="true"/>
     </fragment>
     <fragment android:id="@+id/darkFragment"
-              android:name="nz.calculatorpp.android.popcorn.DarkFragment"
+              android:name="nz.calculatorpp.android.bigbuttoncalculator.DarkFragment"
               android:label="DarkFragment">
         <action android:id="@+id/action_darkFragment_to_menuFragment"
                 app:destination="@id/menuFragment"
                 app:enterAnim="@anim/fade_in" app:exitAnim="@anim/fade_out"/>
     </fragment>
     <fragment android:id="@+id/lightFragment"
-              android:name="nz.calculatorpp.android.popcorn.LightFragment"
+              android:name="nz.calculatorpp.android.bigbuttoncalculator.LightFragment"
               android:label="LightFragment">
         <action android:id="@+id/action_lightFragment_to_menuFragment"
                 app:destination="@id/menuFragment"
                 app:enterAnim="@anim/fade_in" app:exitAnim="@anim/fade_out"/>
     </fragment>
     <fragment android:id="@+id/menuFragment"
-              android:name="nz.calculatorpp.android.popcorn.MenuFragment"
+              android:name="nz.calculatorpp.android.bigbuttoncalculator.MenuFragment"
               android:label="MenuFragment">
         <action android:id="@+id/action_menuFragment_to_darkFragment"
                 app:destination="@id/darkFragment"
